--- a/gen_summary.html
+++ b/gen_summary.html
@@ -286,8 +286,8 @@
                         <p id="selectSummaryError" style="color: red; font-size: 0.95em; display: none;">Please select a summary version to approve.</p>
                         <div style="display: flex; gap: 20px; margin-bottom: 15px;">
                             <div style="flex: 1;">
-                                <label for="tags" style="font-weight: bold; color: #555;">Tags:</label>
-                                <select id="tags" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
+                                <label for="category" style="font-weight: bold; color: #555;">Category:</label>
+                                <select id="category" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
                                     <option value="Markets">Markets</option>
                                     <option value="Stocks">Stocks</option>
                                     <option value="IPO">IPO</option>
@@ -380,7 +380,7 @@
     
         async function approveContent(id) {
             const apiToken = document.getElementById('apiToken').value;
-            const tags = document.getElementById('tags').value;
+            const category = document.getElementById('category').value;
             const label = document.getElementById('label').value;
             const provider = document.getElementById('provider').value;
             const createdAt = document.getElementById('createdAt').value;
@@ -444,7 +444,7 @@
                     id: id,
                     gen_title: genTitle,
                     summary: summary,
-                    tag: tags,
+                    category: category,
                     label: label,
                     news_provider: provider,
                     news_datetime: createdAtEpoch,
