--- a/gen_summary.html
+++ b/gen_summary.html
@@ -286,24 +286,23 @@
                         <p id="selectSummaryError" style="color: red; font-size: 0.95em; display: none;">Please select a summary version to approve.</p>
                         <div style="display: flex; gap: 20px; margin-bottom: 15px;">
                             <div style="flex: 1;">
-                                <label for="tags" style="font-weight: bold; color: #555;">Tags:</label>
-                                <select id="tags" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
-                                    <option value="Markets">Markets</option>
+                                <label for="category" style="font-weight: bold; color: #555;">Category:</label>
+                                <select id="category" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
+                                    <option value="Pulse">Pulse</option>
                                     <option value="Stocks">Stocks</option>
-                                    <option value="IPO">IPO</option>
-                                    <option value="Crypto">Crypto</option>
+                                    <option value="X-Press">X-Press</option>
                                 </select>
                             </div>
                             <div style="flex: 1;">
                                 <label for="label" style="font-weight: bold; color: #555;">Label:</label>
-                                <select id="label" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
-                                    <option value="" selected></option>
-                                    <option value="Factual">Factual</option>
-                                    <option value="Opinion">Opinion</option>
-                                    <option value="Analysis">Analysis</option>
-                                    <option value="Exclusive">Exclusive</option>
-                                    <option value="Breaking">Breaking</option>
-                                </select>
+                                <input list="labelSuggestions" id="label" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;" placeholder="Enter or select label" />
+                                <datalist id="labelSuggestions">
+                                    <option value="Factual">
+                                    <option value="Opinion">
+                                    <option value="Analysis">
+                                    <option value="Exclusive">
+                                    <option value="Breaking">
+                                </datalist>
                             </div>
                         </div>
                         <div style="display: flex; gap: 20px; margin-bottom: 15px;">
@@ -380,8 +379,8 @@
     
         async function approveContent(id) {
             const apiToken = document.getElementById('apiToken').value;
-            const tags = document.getElementById('tags').value;
-            const label = document.getElementById('label').value;
+            const category = document.getElementById('category').value;
+            const label = document.getElementById('label').value.trim();
             const provider = document.getElementById('provider').value;
             const createdAt = document.getElementById('createdAt').value;
             const approvalResponseDiv = document.getElementById('approvalResponse');
@@ -444,7 +443,7 @@
                     id: id,
                     gen_title: genTitle,
                     summary: summary,
-                    tag: tags,
+                    category: category,
                     label: label,
                     news_provider: provider,
                     news_datetime: createdAtEpoch,
@@ -544,6 +543,18 @@
             // Add more patterns as needed
             return '';
         }
+
+        function setCategoryBasedOnUrl(url) {
+            const categorySelect = document.getElementById('category');
+            if (url && (url.includes('x.com') || url.includes('twitter.com'))) {
+                categorySelect.value = 'X-Press';
+            } else {
+                categorySelect.value = 'Pulse'; // Default value
+            }
+        }
+        document.getElementById('newsUrl').addEventListener('input', function(e) {
+            setCategoryBasedOnUrl(e.target.value);
+        });
 
         function handleEnvChange() {
             const env = document.getElementById('envDropdown').value;
