--- a/gen_summary.html
+++ b/gen_summary.html
@@ -308,13 +308,14 @@
                         <div style="display: flex; gap: 20px; margin-bottom: 15px;">
                             <div style="flex: 1;">
                                 <label for="provider" style="font-weight: bold; color: #555;">News Provider:</label>
-                                <select id="provider" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
-                                    <option value="Economic Times">Economic Times</option>
-                                    <option value="Times of India">Times of India</option>
-                                    <option value="The Hindu">The Hindu</option>
-                                    <option value="X.com">X.com</option>
-                                    <option value="Mint">Mint</option>
-                                </select>
+                                <input list="providerSuggestions" id="provider" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px;" placeholder="Enter or select provider" />
+                                <datalist id="providerSuggestions">
+                                    <option value="Economic Times">
+                                    <option value="Times of India">
+                                    <option value="The Hindu">
+                                    <option value="X.com">
+                                    <option value="Mint">
+                                </datalist>
                             </div>
                             <div style="flex: 1;">
                                 <label for="createdAt" style="font-weight: bold; color: #555;">News Created Date & Time:</label>
