playstore link changed

--- a/index.html
+++ b/index.html
@@ -698,14 +698,14 @@
         <h1>Finance News. No Noise.</h1>
         <p class="tagline">Get the day's top market stories in 60 words. Human-picked. AI-polished. All signal.</p>
         <div class="button-group">
-          <a href="#" class="button">
+          <a href="https://play.google.com/store/apps/details?id=monezy.inapp" class="button">
             <span class="button-icon">📱</span>
             Get it on Google Play
           </a>
-          <a href="preview.html" class="button secondary">
-            <span class="button-icon">📲</span>
-            App Preview 
-          </a>
+<!--          <a href="preview.html" class="button secondary">-->
+<!--            <span class="button-icon">📲</span>-->
+<!--            App Preview -->
+<!--          </a>-->
         </div>
       </div>
    </div>
