--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
       <div class="cta-content">
         <h3>Smart finance starts here</h3>
         <p>No clutter. No fluff. Just clean news you'll actually use. Take control of your financial knowledge today.</p>
-        <a href="#" class="button">Download Monezy</a>
+        <a href="https://play.google.com/store/apps/details?id=monezy.inapp&pcampaignid=web_share" class="button">Download Monezy</a>
       </div>
     </div>
   </section>
@@ -863,8 +863,7 @@
           <div class="footer-logo">MONE<span>ZY</span></div>
           <p class="footer-description">Finance news without the noise. Get the signal that matters to your money.</p>
           <div class="footer-social">
-            <a href="#" class="social-link">𝕏</a>
-            <a href="#" class="social-link">in</a>
-            <a href="#" class="social-link">f</a>
-            <a href="#" class="social-link">IG</a>
+            <a href="https://x.com/monezydotin" class="social-link">𝕏</a>
+            <a href="https://www.linkedin.com/company/monezy/about/?viewAsMember=true" class="social-link">in</a>
+            <a href="https://www.instagram.com/monezy.in/" class="social-link"><i class="fa-brands fa-instagram"></i></a>
           </div>
