--- a/index.html
+++ b/index.html
@@ -865,5 +865,5 @@
           <div class="footer-social">
             <a href="https://x.com/monezydotin" class="social-link">𝕏</a>
             <a href="https://www.linkedin.com/company/monezy/about/?viewAsMember=true" class="social-link">in</a>
-            <a href="https://www.instagram.com/monezy.in/" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/monezy.in/" class="social-link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </div>
