--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monezy - Finance News. No Noise.</title>
+
+  <!-- SEO tags -->
+  <link rel="canonical" href="https://www.monezy.in/news/" />
+  <meta property="og:title" content="Monezy App - Financial Management">
+  <meta property="og:description" content="Manage your finances with Monezy web app">
+  <meta property="og:url" content="https://www.monezy.in/news/">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon (use your existing one) -->
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
+
   <style>
     /* Modern, clean design system */
     :root {
