--- a/index.html
+++ b/index.html
@@ -731,10 +731,10 @@
             <span class="button-icon">📱</span>
             Get it on Google Play
           </a>
-<!--          <a href="preview.html" class="button secondary">-->
-<!--            <span class="button-icon">📲</span>-->
-<!--            App Preview -->
-<!--          </a>-->
+      <a href="https://www.monezy.in/news" class="button secondary">
+           <span class="button-icon">📲</span>
+           Read News 
+         </a>
         </div>
       </div>
    </div>
